dataset1235/2025-2/805158916/users/3563627350/executions/2651470117_1626817775.log
== SUBMISSION (2025-08-25 14:42:16)
-- CODE: 
import math

r = float(input())

area = math.pi * (r **2)
volume = (4/3) * math.pi * (r **3)

print(round(area, 3))
print(round(volume, 3))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.004
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
381.704
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
7871.076
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
5575.28
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
1279110.151
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
33.51
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 14:41:50)
-- CODE: 
import math

r = float(input))

area = math.pi * (r **2)
volume = (4/3) * math.pi * (r **3)

print(round(area, 3))
print(round(volume, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
File "XXXX", line 3
    r = float(input))
                    ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
File "XXXX", line 3
    r = float(input))
                    ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
File "XXXX", line 3
    r = float(input))
                    ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
File "XXXX", line 3
    r = float(input))
                    ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
File "XXXX", line 3
    r = float(input))
                    ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
File "XXXX", line 3
    r = float(input))
                    ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 14:41:53)
-- CODE: 
import math

r = float(input))

area = math.pi * (r **2)
volume = (4/3) * math.pi * (r **3)

print(round(area, 3))
print(round(volume, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
File "XXXX", line 3
    r = float(input))
                    ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
File "XXXX", line 3
    r = float(input))
                    ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
File "XXXX", line 3
    r = float(input))
                    ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
File "XXXX", line 3
    r = float(input))
                    ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
File "XXXX", line 3
    r = float(input))
                    ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
File "XXXX", line 3
    r = float(input))
                    ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 14:41:07)
-- CODE: 
import math

r = float(input))

area = math.pi * (r **2)
volume = (4/3) * math.pi * (r **3)

print(round(area, 3))
print(round(volume,3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
File "XXXX", line 3
    r = float(input))
                    ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
File "XXXX", line 3
    r = float(input))
                    ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
File "XXXX", line 3
    r = float(input))
                    ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
File "XXXX", line 3
    r = float(input))
                    ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
File "XXXX", line 3
    r = float(input))
                    ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
File "XXXX", line 3
    r = float(input))
                    ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
